force-app/main/default/objects/Send_Email__c/Send_Email__c.object-meta.xml
<CustomObject>
    <label>Weekly report</label>
    <nameField>
        <displayFormat>WR-{YYYY}{MM}{DD}-{000}</displayFormat>
        <label>周报编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weekly reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>