force-app/main/default/objects/Send_Email__c/fields/Address_Ids__c.field-meta.xml
<CustomField>
    <fullName>Address_Ids__c</fullName>
    <label>收件人Id</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>