force-app/main/default/objects/Send_Email__c/fields/Cc_Ids__c.field-meta.xml
<CustomField>
    <fullName>Cc_Ids__c</fullName>
    <label>抄送人Id</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>