force-app/main/default/objects/Send_Email__c/fields/Cc_Usernames__c.field-meta.xml
<CustomField>
    <fullName>Cc_Usernames__c</fullName>
    <label>抄送人姓名&amp;邮箱</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>